Update package method / build file