@@ -6,7 +6,7 @@
 
     <groupId>at.ITArchitects</groupId>
     <artifactId>JeditFX</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     
     <description>JeditFX is a simple editor like notepad but support for very large files</description>
 
@@ -150,7 +150,7 @@
                 <configuration>
                     <mainClass>${main-class}</mainClass> 
                     <options>                                   
-                        <option>-XX:+UseShenandoahGC</option>
+                        <option>-XX:+UseZGC</option>
                         <option>--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option>                                
                     </options>
                     <executions>
@@ -193,49 +193,7 @@
                         </execution>
                     </executions>                    
                 </configuration>
-            </plugin>
-            <plugin>
-                <!-- https://github.com/wiverson/jtoolprovider-plugin -->
-                <groupId>io.github.wiverson</groupId>
-                <artifactId>jtoolprovider-plugin</artifactId>
-                <version>1.0.34</version>
-                <executions>                    
-                    <execution>
-                        <id>jlink</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>java-tool</goal>
-                        </goals>
-                        <configuration>
-                            <toolName>jlink</toolName>
-                            <removeDirectories>${project.build.directory}/jvm-image/</removeDirectories>
-                            <modulePath>${project.basedir}/${platform}-javafx/javafx-jmods-${javafx.version}/
-                            </modulePath>
-                            <addModules>${jvm.modules}</addModules>
-                            <output>${project.build.directory}/jvm-image</output>
-                            <args>
-                                <arg>--strip-native-commands</arg>
-                                <arg>--no-header-files</arg>
-                                <arg>--strip-debug</arg>
-                                <arg>--no-man-pages</arg>
-                                <arg>--compress=2</arg>
-                            </args>
-                        </configuration>
-                    </execution>                  
-                    <execution>
-                        <id>jpackage</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>java-tool</goal>
-                        </goals>
-                        <configuration>
-                            <toolName>jpackage</toolName>
-                            <removeDirectories>${project.build.directory}/installer-work</removeDirectories>
-                            <args>@${project.build.directory}/packaging/${platform}-jpackage.txt</args>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            </plugin>            
         </plugins>
         <pluginManagement>
             <plugins>
@@ -341,10 +299,7 @@
             </properties>
             <build>
                 <plugins>
-                    <plugin>
-                        <!-- This adds a "launch on finish" to the Windows msi installer. This just tweaks the Windows
-                       installer package to run the executable after the installer runs, simplifying the user experience.
-                        If you don't want this behavior, just delete this plug execution. -->
+                    <plugin>                        
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>3.0.0</version>
@@ -379,6 +334,55 @@
             <properties>
                 <platform>mac</platform>
             </properties>
+        </profile>
+        <profile>
+            <id>package</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- https://github.com/wiverson/jtoolprovider-plugin -->
+                        <groupId>io.github.wiverson</groupId>
+                        <artifactId>jtoolprovider-plugin</artifactId>
+                        <version>1.0.34</version>
+                        <executions>                    
+                            <execution>
+                                <id>jlink</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>java-tool</goal>
+                                </goals>
+                                <configuration>
+                                    <toolName>jlink</toolName>
+                                    <removeDirectories>${project.build.directory}/jvm-image/</removeDirectories>
+                                    <modulePath>${project.basedir}/${platform}-javafx/javafx-jmods-${javafx.version}/
+                                    </modulePath>
+                                    <addModules>${jvm.modules}</addModules>
+                                    <output>${project.build.directory}/jvm-image</output>
+                                    <args>
+                                        <arg>--strip-native-commands</arg>
+                                        <arg>--no-header-files</arg>
+                                        <arg>--strip-debug</arg>
+                                        <arg>--no-man-pages</arg>
+                                        <arg>--compress=2</arg>
+                                    </args>
+                                </configuration>
+                            </execution>                  
+                            <execution>
+                                <id>jpackage</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>java-tool</goal>
+                                </goals>
+                                <configuration>
+                                    <toolName>jpackage</toolName>
+                                    <removeDirectories>${project.build.directory}/installer-work</removeDirectories>
+                                    <args>@${project.build.directory}/packaging/${platform}-jpackage.txt</args>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
